# src/main/java/com/proyectum/users/api/RoleController.java
@@ -2,8 +2,12 @@ package com.proyectum.users.api;
 
 import com.proyectum.api.RoleApi;
 import com.proyectum.model.RoleRequest;
+import com.proyectum.model.RoleResponse;
 import com.proyectum.users.api.mapper.RoleApiMapper;
 import com.proyectum.users.ddd.command.CommandBus;
+import com.proyectum.users.ddd.query.QueryBus;
+import com.proyectum.users.domain.model.role.RoleAggregate;
+import com.proyectum.users.domain.query.role.ListRolesQuery;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -12,11 +16,14 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+
 @RestController
 @RequiredArgsConstructor
 public class RoleController implements RoleApi {
 
     private final CommandBus commandBus;
+    private final QueryBus queryBus;
     private final RoleApiMapper roleApiMapper;
 
     @Override
@@ -27,5 +34,16 @@ public class RoleController implements RoleApi {
         return ResponseEntity
                 .status(HttpStatus.CREATED)
                 .build();
+    }
+
+    @Override
+    public ResponseEntity<RoleResponse> listAll() {
+        var roles = (List<RoleAggregate>) queryBus.ask(new ListRolesQuery());
+        var response = new RoleResponse();
+        response.setData(roles.
+                stream()
+                .map(roleApiMapper::to)
+                .toList());
+        return ResponseEntity.ok(response);
     }
 }
