# src/main/resources/api/openapi.yml
@@ -58,6 +58,18 @@ paths:
       responses:
         201:
           description: 'Created'
+    get:
+      description: List all roles
+      operationId: listAll
+      tags:
+        - role
+      responses:
+        200:
+          description: All roles
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RoleResponse'
 components:
   schemas:
     RoleRequest:
@@ -79,7 +91,28 @@ components:
           type: string
           maxLength: 100
           minLength: 5
-
+    RoleResponse:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/Role'
+    Role:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: '66a822be-b28a-4258-9a51-f6bd017ba0fe'
+        name:
+          type: string
+          maxLength: 40
+          minLength: 3
+        description:
+          type: string
+          maxLength: 100
+          minLength: 5
     SignInRequest:
       type: object
       required:
